Solve camera motion generates "Solve error: nan" #67089

Closed
opened 2019-07-17 00:11:28 +02:00 by Vince Herried · 11 comments

System Information
Operating system: Linux-5.1.16-300.fc30.x86_64-x86_64-with-fedora-30-Thirty 64 Bits
Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.09

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-11 13:50, hash: 06312c6d2d
Worked: (optional)

Short description of error
[Please fill out a short description of the error here]
With five tracks, attempt to solve camera motion generates "Solve error: nan" message

I also saw this error when trying to use the clean up -> clean tracks with error # ( forget the error size I had specified ).

Exact steps for others to reproduce the error
Creates image sequence.
loaded clip into motion tracking
set sequence frames
started creating tracks
jumped into solve camera motion early
Error shows up.
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

opened a set of PNGs and started creating tracks
solveErrornan.png

solveErrorNan.blend

**System Information** Operating system: Linux-5.1.16-300.fc30.x86_64-x86_64-with-fedora-30-Thirty 64 Bits Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.09 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-11 13:50, hash: `06312c6d2d` Worked: (optional) **Short description of error** [Please fill out a short description of the error here] With five tracks, attempt to solve camera motion generates "Solve error: nan" message I also saw this error when trying to use the clean up -> clean tracks with error # ( forget the error size I had specified ). **Exact steps for others to reproduce the error** Creates image sequence. loaded clip into motion tracking set sequence frames started creating tracks jumped into solve camera motion early Error shows up. [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)] opened a set of PNGs and started creating tracks ![solveErrornan.png](https://archive.blender.org/developer/F7613726/solveErrornan.png) [solveErrorNan.blend](https://archive.blender.org/developer/F7613728/solveErrorNan.blend)
Author

Added subscriber: @vince_549

Added subscriber: @vince_549

Added subscriber: @ZedDB

Added subscriber: @ZedDB

The images are not included so I can't really reproduce this.

I'm also a but unsure with the reproduction steps. What do I have to do with the provided file to get it to break?

The images are not included so I can't really reproduce this. I'm also a but unsure with the reproduction steps. What do I have to do with the provided file to get it to break?
Author

I just clicked solve camera motion with the settings in the blend file.
Hopefully your system can handle the images ( 324MB ).

I just clicked solve camera motion with the settings in the blend file. Hopefully your system can handle the images ( 324MB ).
Author

solverror.tar.bz2
Here are the images.
thanks.

[solverror.tar.bz2](https://archive.blender.org/developer/F7616563/solverror.tar.bz2) Here are the images. thanks.
Author

RC2 still has the problem

RC2 still has the problem

Added subscriber: @Sergey

Added subscriber: @Sergey

I still can't reproduce the exact error I'm just getting that is can solve the camera trackers (no NaN error).

@Sergey any ideas?

I still can't reproduce the exact error I'm just getting that is can solve the camera trackers (no NaN error). @Sergey any ideas?
Sergey Sharybin self-assigned this 2019-07-22 19:01:01 +02:00

Yes. It is not possible to solve this exact motion: it is required to have at least 8 correspondences between keyframes (as in, common tracks which location is known).

The issue here is that when you use auto-keyframe it doesn't check for this, which is wrong and i'll fix that.

To make your motion solvable you need to track at least 2 more features.

P.S. Another thing i've noticed here is that you seems to be tracking a flat surface. This doesn't have well defined math solution. Sometimes Blender's solver manages to give decent/expected results sometimes it doesn't. But it's really not something we can address in any way.

Yes. It is not possible to solve this exact motion: it is required to have at least 8 correspondences between keyframes (as in, common tracks which location is known). The issue here is that when you use auto-keyframe it doesn't check for this, which is wrong and i'll fix that. To make your motion solvable you need to track at least 2 more features. P.S. Another thing i've noticed here is that you seems to be tracking a flat surface. This doesn't have well defined math solution. Sometimes Blender's solver manages to give decent/expected results sometimes it doesn't. But it's really not something we can address in any way.

This issue was referenced by 7d65827980

This issue was referenced by 7d65827980e72750d0c58de9e6865e8d32a7a90c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67089
No description provided.